--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "start": "cross-env PORT=4500 node ./dist/index.js -w",
-    "start:mon": "cross-env DEBUG=W6B* PORT=4500 nodemon ./dist/index.js",
+    "start:mon": "cross-env DEBUG=W7B* PORT=4500 nodemon ./dist/index.js",
     "build": "tsc -w",
     "test": "jest --watchAll --coverage",
     "test:prod": "jest --watchAll --coverage --watchAll=false --passWithNoTests",
@@ -54,6 +54,7 @@
     "jest-ts-webcompat-resolver": "^1.0.0",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.0",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "nodemon": "^2.0.21"
   }
 }
