--- a/package.json
+++ b/package.json
@@ -42,8 +42,10 @@
     "@types/express": "^4.17.17",
     "@types/inquirer": "^9.0.3",
     "@types/jsonwebtoken": "^9.0.1",
+    "@types/mongoose": "^5.11.97",
     "@types/morgan": "^1.9.4",
     "bcrypt": "^5.1.0",
+    "bcryptjs": "^2.4.3",
     "commander": "^10.0.0",
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
